--- a/module1/.eslintrc.json
+++ b/module1/.eslintrc.json
@@ -1,6 +1,21 @@
 {
+  "parser": "babel-eslint",
   "extends": "airbnb",
+  "env": {
+    "browser": true,
+    "jest": true
+  },
+  "plugins": ["react", "jsz-a11y", "import"],
   "rules": {
-    "linebreak-style": "off"
+    "linebreak-style": "off",
+    "react/jsx-filename-extension": [
+      "error",
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ],
+    "global-require": "off",
+    "import/prefer-default-export": "off",
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
   }
 }
