--- a/module1/package.json
+++ b/module1/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3",
     "node-sass": "^4.11.0",
+    "prettier-eslint": "^8.8.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
