--- a/module2/.eslintrc
+++ b/module2/.eslintrc
@@ -7,6 +7,7 @@
   },
   "plugins": ["react", "jsx-a11y", "import"],
   "rules": {
+    "react/jsx-one-expression-per-line": "off",
     "linebreak-style": "off",
     "react/jsx-filename-extension": [
       "error",
