--- a/module3/package.json
+++ b/module3/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -12,6 +13,7 @@
     "reactotron-react-js": "^2.1.4",
     "reactotron-redux": "^2.1.3",
     "redux": "^4.0.1",
+    "redux-saga": "^1.0.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
